# quizRandom

./: 65775.txt  CMakeLists.txt  README.md  build.sh  clean  clean.sh  config.sh  configure.sh  debug.sh  run.sh
cmake/: FindSQLite3.cmake
headers/: crypto.cpp  crypto.h
libraries/: CMakeLists.txt
libraries/sqlite/: Makefile  config.h  config.status  libtool  mksourceid
libraries/ssl/.github/workflows/: ci.yml
src/: trial.cpp
